--- a/src/app/components/buttons/buttons.component.html
+++ b/src/app/components/buttons/buttons.component.html
@@ -1,1 +1,28 @@
-<p>buttons works!</p>
+<div class="buttons">
+  <div class="buttons__main">
+    <button class="buttons__main-item">1</button>
+    <button class="buttons__main-item">2</button>
+    <button class="buttons__main-item">3</button>
+    <button class="buttons__main-item">4</button>
+    <button class="buttons__main-item">5</button>
+    <button class="buttons__main-item">6</button>
+    <button class="buttons__main-item">7</button>
+    <button class="buttons__main-item">8</button>
+    <button class="buttons__main-item">9</button>
+    <button class="buttons__main-item">.</button>
+    <button class="buttons__main-item">0</button>
+    <button class="buttons__main-item">d</button>
+  </div>
+  <div class="buttons__operators">
+    <button class="buttons__operators-item">1</button>
+    <button class="buttons__operators-item">2</button>
+    <button class="buttons__operators-item">3</button>
+    <button class="buttons__operators-item">4</button>
+    <button class="buttons__operators-item">5</button>
+  </div>
+  <div class="buttons__additional">
+    <button class="buttons__additional-item">1</button>
+    <button class="buttons__additional-item">2</button>
+    <button class="buttons__additional-item">3</button>
+  </div>
+</div>
