--- a/src/app/components/buttons/buttons.component.html
+++ b/src/app/components/buttons/buttons.component.html
@@ -1,28 +1,32 @@
 <div class="buttons">
-  <div class="buttons__main">
-    <button class="buttons__main-item">1</button>
-    <button class="buttons__main-item">2</button>
-    <button class="buttons__main-item">3</button>
-    <button class="buttons__main-item">4</button>
-    <button class="buttons__main-item">5</button>
-    <button class="buttons__main-item">6</button>
-    <button class="buttons__main-item">7</button>
-    <button class="buttons__main-item">8</button>
-    <button class="buttons__main-item">9</button>
-    <button class="buttons__main-item">.</button>
-    <button class="buttons__main-item">0</button>
-    <button class="buttons__main-item">d</button>
+  <div>
+    <div class="buttons__additional">
+      <button class="buttons__additional-item">C</button>
+      <button class="buttons__additional-item">
+        <img src="../../../assets/images/plusMinus.svg" alt="" />
+      </button>
+      <button class="buttons__additional-item">%</button>
+    </div>
+    <div class="buttons__main">
+      <button class="buttons__main-item">1</button>
+      <button class="buttons__main-item">2</button>
+      <button class="buttons__main-item">3</button>
+      <button class="buttons__main-item">4</button>
+      <button class="buttons__main-item">5</button>
+      <button class="buttons__main-item">6</button>
+      <button class="buttons__main-item">7</button>
+      <button class="buttons__main-item">8</button>
+      <button class="buttons__main-item">9</button>
+      <button class="buttons__main-item">.</button>
+      <button class="buttons__main-item">0</button>
+      <button class="buttons__main-item"><img src="../../../assets/images/delete.svg" alt="" srcset=""></button>
+    </div>
   </div>
   <div class="buttons__operators">
-    <button class="buttons__operators-item">1</button>
-    <button class="buttons__operators-item">2</button>
-    <button class="buttons__operators-item">3</button>
-    <button class="buttons__operators-item">4</button>
-    <button class="buttons__operators-item">5</button>
-  </div>
-  <div class="buttons__additional">
-    <button class="buttons__additional-item">1</button>
-    <button class="buttons__additional-item">2</button>
-    <button class="buttons__additional-item">3</button>
+    <button class="buttons__operators-item">/</button>
+    <button class="buttons__operators-item">×</button>
+    <button class="buttons__operators-item">-</button>
+    <button class="buttons__operators-item">+</button>
+    <button class="buttons__operators-item">=</button>
   </div>
 </div>
