--- a/src/app/components/buttons/buttons.component.scss
+++ b/src/app/components/buttons/buttons.component.scss
@@ -1,8 +1,13 @@
 .buttons {
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  gap: 16px;
+
   &__main {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: repeat(3, 1fr);
+    gap: 16px;
 
     &-item {
       background: none;
@@ -10,6 +15,7 @@
       border: none;
       font-size: 32px;
       transition: 150ms;
+      border-radius: 24px;
 
       &:hover {
         background: red;
@@ -21,6 +27,7 @@
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: repeat(5, 1fr);
+    gap: 16px;
 
     &-item {
       background: none;
@@ -28,6 +35,8 @@
       border: none;
       font-size: 32px;
       transition: 150ms;
+      border-radius: 24px;
+      background: #4B5EFC;
 
       &:hover {
         background: red;
@@ -38,12 +47,17 @@
   &__additional {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    gap: 16px;
+    margin-bottom: 16px;
+
     &-item {
       background: none;
       height: 72px;
       border: none;
       font-size: 32px;
       transition: 150ms;
+      border-radius: 24px;
+      background: #4e505f;
 
       &:hover {
         background: red;
