--- a/src/app/components/main/main.component.css
+++ b/src/app/components/main/main.component.css
@@ -3,5 +3,8 @@
     width: 768px;
     height: 1024px;
     padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
     
 }
