--- a/src/app/components/main/main.component.css
+++ b/src/app/components/main/main.component.css
@@ -1,7 +1,8 @@
 .main {
     background: #17171C;
-    width: 768px;
-    height: 1024px;
+    width: 31vw;
+    min-width: 375px;
+    min-height: 1024px;
     padding: 20px;
     display: flex;
     flex-direction: column;
